--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    -webkit-animation: app-logo-spin infinite 20s linear;
   }
 }
 
@@ -36,4 +37,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+nav {
+  background-color: blue;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
